先简单的将yaml与日志整合到一起，实现通过yml文件来设置日志

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -40,6 +40,8 @@ yaml用法
 ： -- 表示是一个object，映射到map
 -  -- 表示是数组
 
+出现了动态库链接错误的问题、未定义的引用问题(s_datas)，本质原因是对库的编译-链接不清楚，得研究一下这方面
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
