--- a/开发笔记.md
+++ b/开发笔记.md
@@ -42,6 +42,16 @@ yaml用法
 
 出现了动态库链接错误的问题、未定义的引用问题(s_datas)，本质原因是对库的编译-链接不清楚，得研究一下这方面
 
+配置系统原则：约定优于配置
+实际的配置参数有上百个，但是真正需要改动的配置参数只有十几个，采用约定优于配置，就可以减少配置量
+
+一开始只是实现了简单的内置类型转换，用boost库实现的。但实际上不是这样的，比如实际我的配置就是个vector、map或者set，那怎么办呢？
+因为我直接用字符串转成相应的vector、map不合适，那怎么办呢？
+解决办法是定义一个中间的类型转换，简单的类型我可以用默认的方式就可以支持了，复杂的类型呢？也分很多种，比如vector、map这种，也算是简单类型中稍微复杂一点的
+类型，这种类型呢我们就可以用一些通用的转换方式直接做了；另外一种是我们自己定义的结构体，比如struct，里面对应的每一个配置项都要解析，这种怎么办？所以我们需要
+一个我们可以自定义的解析的方式。
+
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
