1.将复杂类型转换和简单类型转换分开了，新定义了一个类专门进行简单类型的转换； 2.容器偏特化，目前实现了vector的偏特化

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -51,6 +51,7 @@ yaml用法
 类型，这种类型呢我们就可以用一些通用的转换方式直接做了；另外一种是我们自己定义的结构体，比如struct，里面对应的每一个配置项都要解析，这种怎么办？所以我们需要
 一个我们可以自定义的解析的方式。
 
+还未实现vector转为string的功能，所以还需要做一些偏特化,如果我们不想自定义FromStr和ToStr，那么我们就要把常用容器的偏特化做一下
 
 ## 协程库封装
 协程和异步
