--- a/开发笔记.md
+++ b/开发笔记.md
@@ -53,6 +53,16 @@ yaml用法
 
 还未实现vector转为string的功能，所以还需要做一些偏特化,如果我们不想自定义FromStr和ToStr，那么我们就要把常用容器的偏特化做一下
 
+因为实现是通过递归来实现的，所以无论嵌套多少层，都可以成功
+
+新增配置功能：我的配置如果发生变化了，能不能让我代码级别能感知到这个配置变化，并做出对应操作.
+比如：1.原来配置里写了A路径的文件，后来改了写B路径文件，那我能不能马上感知到你改路径了，我马上形成新的日志文件.
+     2.原来业务是A策略，后来修改为B策略，那怎么让我代码级别能感知到这个变更？
+解决方案：当配置变更的时候，应该触发一个事件，每个人关心的事件不一样，如果某个人关心这个事件，那就捕捉这个事件，否则就不予理睬。即：
+当一个配置项发生修改的时候，可以反向通知对应的代码，回调
+
+配置系统有个问题时，当多线程情况下，有的人在修改配置，有的人在读配置，此时就会存在线程安全的问题。这个问题等后面写了线程模块后，再回来处理一下这个问题
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
