本版本为了保证logger的唯一性，增加和修改了一些代码 用一个全局静态的g_logger对象去写日志，通过SYLAR_LOG_NAME("xxx")来构造

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -63,6 +63,26 @@ yaml用法
 
 配置系统有个问题时，当多线程情况下，有的人在修改配置，有的人在读配置，此时就会存在线程安全的问题。这个问题等后面写了线程模块后，再回来处理一下这个问题
 
+## 日志系统整合配置系统
+所有日志统一放在logs目录下
+logs：
+    — name： root
+      level： (debug, info, warn, error, fatal)
+      formatter: "%d%T%p%T%t%m%n"
+      appender：
+        — type: (StdoutLogAppender, FileLogAppender)
+          level: (debug, ...)
+          file: logs/xxx.log
+
+使用日志一般是这样：
+现在全局范围内定义一个logger： sylar::Logger g_logger = syaler::LoggerMgr->getInstance()->getLogger(name);
+然后后面在使用的时候就直接用logger： SYLAR_LOG_INFO(g_logger) << "xxx log";
+这样写的好处是找日志的时候是比较静态的，第一次在全局拿到logger之后支持继续往下去改.
+那我们要支持这种功能应该怎么做呢？如果我这个日志没定义logger，那肯定是找不到的，没定义返回的就是root，当我定义好logger之后，怎么保证我后面继续写日志的时候，
+他能正常的写到我定义的日志上去呢？所以要解决这个问题。
+
+注：logger和level类的设计还有提升空间，要遵从解耦和单一功能原则(网友弹幕)
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
