实现结构体LogDefine、LogAppenderDefine； 对上面新定义的类进行偏特化； 实现日志配置解析

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -80,6 +80,7 @@ logs：
 这样写的好处是找日志的时候是比较静态的，第一次在全局拿到logger之后支持继续往下去改.
 那我们要支持这种功能应该怎么做呢？如果我这个日志没定义logger，那肯定是找不到的，没定义返回的就是root，当我定义好logger之后，怎么保证我后面继续写日志的时候，
 他能正常的写到我定义的日志上去呢？所以要解决这个问题。
+通过全局静态的Logger::ptr对象来使得日志分层
 
 注：logger和level类的设计还有提升空间，要遵从解耦和单一功能原则(网友弹幕)
 
