解决了两个问题： 1.logger的信息反序列化成yml输出存在的问题.png中存在的问题被解决，如果appenders下没有formatter了，也就不会输出了； 2.上一版本的遗留问题被解决； 存在的新问题： 1.如果在代码层面修改日志格式，并输出新的日志，新的日志存储在system.txt中，但是新的日志格式并没有跟着代码的设置而改变，还是原来yml配置中的格式； 2.输出路径是绝对路径，我们想要输出相对路径；

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -84,6 +84,10 @@ logs：
 
 注：logger和level类的设计还有提升空间，要遵从解耦和单一功能原则(网友弹幕)
 
+logger的信息反序列化成yml输出存在的问题.png记载的是，上面是logger中的信息反序列化成yml输出，下面是原始的yml，存在的问题是：
+原始的yml中，appenders下并没有设置formatter，但是反序列化后却输出了，这是因为输出的是更上一层(父节点)的formatter，我们不想让它输出其父节点的，有就输出，没有就不输出。
+解决方案是：appender得知道自己有没有formatter
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
