--- a/开发笔记.md
+++ b/开发笔记.md
@@ -5,6 +5,10 @@ CentOS7
 gcc 9.1
 cmake
 
+## 通过项目要深入学习的知识
+1.cmake的使用；用cmake构建软件项目(https://juejin.cn/post/6844904097158529032)
+2.git的使用；用git管理项目
+
 ## 项目目录结构
 bin -- 二进制文件
 build -- 中间文件路径
