解决了上一版代码运行会coredump的问题，是因为私有属性没有初始化，且构造函数里也没给私有属性赋值

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -8,7 +8,10 @@ cmake
 ## 通过项目要深入学习的知识
 1.cmake的使用；用cmake构建软件项目(https://juejin.cn/post/6844904097158529032)
 2.git的使用；用git管理项目
-
+ 
+## git
+在使用git时遇到的问题：当突然发现不能push代码了，需要重新输入用户名和密码时，注意这个密码不是github的登录密码，而是个人访问令牌(git在2021年推出的)，
+这个访问令牌需要自己设置，并且一般不设置为永久有效，那么当某一天令牌到期后，又会要求再次输入用户名和密码，这就是为什么git突然不能push了
 ## 项目目录结构
 bin -- 二进制文件
 build -- 中间文件路径
@@ -100,6 +103,9 @@ Thread Mutex
 c++11之前都是用pthread_xxx
 c++11之后都是用自带的std::thread，但是其还是用pthread来实现的
 问：c++11之前和之后，线程的使用方式有什么不同？
+
+本项目用pthread来创建线程、实现信号量和互斥量
+为什么不用c++11的线程来做呢？因为c+11线程里的互斥量没有读写分离的方式，而往往在大并发的情况下，读写分离会使得性能提高很多
 
 ## 协程库封装
 协程和异步
