回退commit后重新提交的，就是为了不commit mutex.txt这个文件

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -107,6 +107,11 @@ c++11之后都是用自带的std::thread，但是其还是用pthread来实现的
 本项目用pthread来创建线程、实现信号量和互斥量
 为什么不用c++11的线程来做呢？因为c+11线程里的互斥量没有读写分离的方式，而往往在大并发的情况下，读写分离会使得性能提高很多
 
+在信号量里，注意的是在出线程构造函数之前，他要启动的线程就一定启动了，这样就保证了线程类生成之前，线程就已经跑起来了
+
+思考一下如何测试多线程使用日志时，自己写的thread模块是符合预期的？是线程安全的？
+做实验复现出多线程日志打印串行的情况
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
