1.对日志模块配置了锁，这样就不会出现多线程写日志串行的问题 2.实验了git回退commit和add的操作

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -12,6 +12,10 @@ cmake
 ## git
 在使用git时遇到的问题：当突然发现不能push代码了，需要重新输入用户名和密码时，注意这个密码不是github的登录密码，而是个人访问令牌(git在2021年推出的)，
 这个访问令牌需要自己设置，并且一般不设置为永久有效，那么当某一天令牌到期后，又会要求再次输入用户名和密码，这就是为什么git突然不能push了
+
+遇到一个问题是，测试产生了超过100M的mutex.txt文件，这个文件太大，push失败，所以不要push这个文件，具体做法是：
+回退commit，然后写一个.gitignore文件，里面写上每次git add时忽略文件里的内容，然后再次重新commit & push
+学到的操作是回退commit、回退git add、add和commit的区别、编写.gitignore文件
 ## 项目目录结构
 bin -- 二进制文件
 build -- 中间文件路径
