--- a/开发笔记.md
+++ b/开发笔记.md
@@ -116,6 +116,12 @@ c++11之后都是用自带的std::thread，但是其还是用pthread来实现的
 思考一下如何测试多线程使用日志时，自己写的thread模块是符合预期的？是线程安全的？
 做实验复现出多线程日志打印串行的情况
 
+加锁或不加锁，日志输出速度差了很多倍，需要优化这个性能(怎么测试出差了十几倍的？答：肉眼看的，看每秒写入文件的大小，加Mutex锁大约每秒写入10M，改为spinlock后，每秒写入大概20M，提升了2倍左右，但比起不加锁，每秒写入100M还是差了很多)
+优化措施：将Mutex换成轻量级的spinlock，spinlock性能会好一点，它如果没获得到锁的话，它不会马上陷入内核态，只会在cpu上空跑，
+这样cpu消耗可能会高一点，但是等待锁的时间会少很多，往往针对冲突比较多，冲突时间比较短的情况下，会有提升
+
+CAS机制？
+
 ## 协程库封装
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
