给配置模块加了个读写锁，因为配置读多写少

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -119,8 +119,13 @@ c++11之后都是用自带的std::thread，但是其还是用pthread来实现的
 加锁或不加锁，日志输出速度差了很多倍，需要优化这个性能(怎么测试出差了十几倍的？答：肉眼看的，看每秒写入文件的大小，加Mutex锁大约每秒写入10M，改为spinlock后，每秒写入大概20M，提升了2倍左右，但比起不加锁，每秒写入100M还是差了很多)
 优化措施：将Mutex换成轻量级的spinlock，spinlock性能会好一点，它如果没获得到锁的话，它不会马上陷入内核态，只会在cpu上空跑，
 这样cpu消耗可能会高一点，但是等待锁的时间会少很多，往往针对冲突比较多，冲突时间比较短的情况下，会有提升
+测试一下，一个线程不加锁全力写日志，好像也就是每秒20M左右？
 
 CAS机制？
+
+存在一个问题，日志正在写到文件中时，如果删除文件，不会报错，也不会产生新的文件继续写？这是什么原因，我跟着up的方法有bug，所以这是个遗留问题，思考如何解决？
+
+配置模块都是写少读多，所以用读写锁了
 
 ## 协程库封装
 协程和异步
