开始写协程模块前的准备工作，实现了assert，方便后续调试

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -8,6 +8,11 @@ cmake
 ## 通过项目要深入学习的知识
 1.cmake的使用；用cmake构建软件项目(https://juejin.cn/post/6844904097158529032)
 2.git的使用；用git管理项目
+3.把开发笔记整理成技术文档输出，体现出善于总结的特点
+4.学习断言assert的使用
+5.学习宏的使用
+6.深入学习c/c++函数调用栈的奥秘(因为涉及到调试看栈的信息)
+7.整个系统完成后，用内存检测工具修复内存泄露
  
 ## git
 在使用git时遇到的问题：当突然发现不能push代码了，需要重新输入用户名和密码时，注意这个密码不是github的登录密码，而是个人访问令牌(git在2021年推出的)，
@@ -74,6 +79,8 @@ yaml用法
 
 配置系统有个问题时，当多线程情况下，有的人在修改配置，有的人在读配置，此时就会存在线程安全的问题。这个问题等后面写了线程模块后，再回来处理一下这个问题
 
+可以从yml文件里读配置数据；也可以把我们内存中更改的配置按照yml格式反序列化到文件里面，
+
 ## 日志系统整合配置系统
 所有日志统一放在logs目录下
 logs：
@@ -131,6 +138,13 @@ CAS机制？
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
 协程：可以将异步的操作封装成同步。用一个协程库+底层kuke，kuke到socket API那一层，当API要请求异步操作的时候，把读写事件先注册起来，然后当请求读写的时候，会陷入到epoll里面去，此时把整个协程先挂起来，当数据回来的时候，再从协程把它唤起。这样写程序的人，并不需要知道协程库的存在，只需要用我们这套协程库框架，自然而然的像写同步一样，写的代码是同步的，但能实现异步的功能。
+
+定义协程接口、ucontext_t、宏(调试用)
+
+把断言assert写好，在判断一些有问题的地方，就可以直接assert
+宏不受命名空间的约束
+
+学习断言assert的使用
 
 ## socket函数库开发
 
