1.增加日志输出线程名称 2.针对日志输出线程名称，产生了一个bug，具体见开发笔记，最终得以解决 3.实现main协程与子协程相互切换的功能，要点是子协程结束后，要手动切换到main协程

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -5,14 +5,31 @@ CentOS7
 gcc 9.1
 cmake
 
+## 突发奇想
+1.之前做ob决赛时，git克隆代码，用的ssh，还要生成公钥私钥这些，用vpn连接服务器这些知识，要整理并学习一下，确保下次遇到还会用，以及当时为什么不能用http，而要用ssh才可以？这两者有什么区别？
+2.介绍一个软件项目，应该从哪几个方面入手？如何介绍好一个项目？如何画图介绍项目
+3.面试时，要引导面试官往自己会的地方走，尽量自己主动多说，让面试官少说
+4.miniob时，陈瑞午那个没初始化的bug，要再跟他好好梳理一下，是怎么解决这个bug的，以及引出：解决bug的效率体现了日常工作的效率，但更重要的是，写代码时要小心，
+在bug摇篮的时候就扼杀它。
+
 ## 通过项目要深入学习的知识
 1.cmake的使用；用cmake构建软件项目(https://juejin.cn/post/6844904097158529032)
-2.git的使用；用git管理项目
+2.git的使用；用git管理项目 《Github 入门与实践》
 3.把开发笔记整理成技术文档输出，体现出善于总结的特点
 4.学习断言assert的使用
 5.学习宏的使用
 6.深入学习c/c++函数调用栈的奥秘(因为涉及到调试看栈的信息)
 7.整个系统完成后，用内存检测工具修复内存泄露
+8.functional的用法
+9.智能指针的用法
+10.自动化测试
+11.私有构造函数的使用
+12.自动化构建
+13.自动化部署
+14.自动化测试工具和日志分析工具
+15.从持续开发、持续测试、持续集成、持续部署和持续监控这五个方面去考虑重构项目代码
+16.gdb的使用
+17.如何高效的找出bug所在
  
 ## git
 在使用git时遇到的问题：当突然发现不能push代码了，需要重新输入用户名和密码时，注意这个密码不是github的登录密码，而是个人访问令牌(git在2021年推出的)，
@@ -135,6 +152,8 @@ CAS机制？
 配置模块都是写少读多，所以用读写锁了
 
 ## 协程库封装
+协程模块是这个框架的核心
+
 协程和异步
 异步：对开发人员技术功底很高。如果出现很多层次的异步调用，会比较混乱，调试很难，开发很难。
 协程：可以将异步的操作封装成同步。用一个协程库+底层kuke，kuke到socket API那一层，当API要请求异步操作的时候，把读写事件先注册起来，然后当请求读写的时候，会陷入到epoll里面去，此时把整个协程先挂起来，当数据回来的时候，再从协程把它唤起。这样写程序的人，并不需要知道协程库的存在，只需要用我们这套协程库框架，自然而然的像写同步一样，写的代码是同步的，但能实现异步的功能。
@@ -145,7 +164,26 @@ CAS机制？
 宏不受命名空间的约束
 
 学习断言assert的使用
+系统实现的assert宏，不能打印出栈的信息，所以我们自己实现了一个assert宏
 
+协程的创建个数是线程的成千上万倍
+
+我们要做的协程并不是说任意切换的协程，每个线程里有个main协程，所有的协程切换都跟这个main协程有关，子协程要退出了，那你就把执行控制权还回main协程，main协程再协调其他协程执行。当然子协程也可以下面继续管理其他协程，但这样不好调度，就不采用了
+通过Fiber::GetThis()获取当前协程
+thread-->main_fiber <--> sub_fiber
+             |
+             V
+          sub_fiber
+
+子协程不能返回main协程的问题(找不到回来的路径)，详细看视频P29 9'，代码是Fiber::MainFunc():190-192行
+解决方法是等他结束之后，又手动切回了main协程上面
+
+找了1个小时的bug：三个线程一起跑时，显示每个线程的名字为UNKNOW
+原因：Thread::run(void *arg)函数里，t_thread_name没有被设置为线程创建时的名字，而没有被初始化，默认就是UNKNOW。这个变量是线程局部变量。
+如何找到问题所在：打断点到Thread构造函数初始，单步，一个线程运行后直接输出了日志信息，此时名字就是UNKNOW，我就意识到了问题在run函数里，然后对照sylar原版run
+函数代码检查，发现少了一行设置代码。
+总结：出问题还是要打断点调试啊，光看是看不出来的。
+                
 ## socket函数库开发
 
 ## HTTP协议开发
