写了协程调度器Schedule的一些功能接口

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -181,9 +181,16 @@ thread-->main_fiber <--> sub_fiber
 找了1个小时的bug：三个线程一起跑时，显示每个线程的名字为UNKNOW
 原因：Thread::run(void *arg)函数里，t_thread_name没有被设置为线程创建时的名字，而没有被初始化，默认就是UNKNOW。这个变量是线程局部变量。
 如何找到问题所在：打断点到Thread构造函数初始，单步，一个线程运行后直接输出了日志信息，此时名字就是UNKNOW，我就意识到了问题在run函数里，然后对照sylar原版run
-函数代码检查，发现少了一行设置代码。
+函数代码检查，发现少了一行设置代码。还有一个原因是我看到SetName()成功了，就怀疑跟t_thread_name这个变量有关
 总结：出问题还是要打断点调试啊，光看是看不出来的。
-                
+
+一个子协程执行完了之后，会释放自己的协程栈和执行栈
+
+scheduler--更多的协程调度：协程在不同线程之间切换
+        1-N       1-M
+scheduler-->threads-->fibers
+1.线程池，分配一组线程
+2.协程调度器，将协程调度到对应的线程上去执行
 ## socket函数库开发
 
 ## HTTP协议开发
