调通了协程调度模块

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -30,6 +30,8 @@ cmake
 15.从持续开发、持续测试、持续集成、持续部署和持续监控这五个方面去考虑重构项目代码
 16.gdb的使用
 17.如何高效的找出bug所在
+18.如何让框架代码的复用性提高？如何易于扩展
+19.如何多线程编程？(网友弹幕：应该会有一条非常清晰的主线)
  
 ## git
 在使用git时遇到的问题：当突然发现不能push代码了，需要重新输入用户名和密码时，注意这个密码不是github的登录密码，而是个人访问令牌(git在2021年推出的)，
@@ -97,6 +99,8 @@ yaml用法
 配置系统有个问题时，当多线程情况下，有的人在修改配置，有的人在读配置，此时就会存在线程安全的问题。这个问题等后面写了线程模块后，再回来处理一下这个问题
 
 可以从yml文件里读配置数据；也可以把我们内存中更改的配置按照yml格式反序列化到文件里面，
+
+Config类里关于静态变量初始化顺序的bug，学一下视频是如何用gdb调试出来的
 
 ## 日志系统整合配置系统
 所有日志统一放在logs目录下
@@ -193,6 +197,23 @@ scheduler-->threads-->fibers
 2.协程调度器，将协程调度到对应的线程上去执行
 
 Scheduler::run()方法的逻辑，看视频P32 30'
+1.设置当前线程的scheduler
+2.设置当前线程中执行run方法的协程
+3.协程调度循环while(true):
+  1.协程消息队列循环while(队列不空)
+  2.无任务，执行idle
+
+视频 P33的coredump bug调试要学一下，学怎么定位到bug的
+在fiber.cpp的Fiber::MainFunc()函数里触发了Fiber except: bad_function_call这样一个异常，日志显示此时fiberId这样一个异常，日志显示此时fiberId = 0
+fiberId为0说明是main协程，但是线程的main协程不会进入到MainFunc里面，它进入了这个方法，说明协程的切换是有问题的，如何修正？在Fiber::call()里
+加入SetThis()，就像SwapIn()那里面一样。修复后就不会有bad_function_call异常了，
+但又会产生新的问题：会到达Fiber::MainFunc()的nerver reach断言，正常
+是不会触发这个断言的。这是因为SwapOut()函数里，SetThis为Scheduler的MainFiber，这个fiber是指向运行run函数的fiber，所以就是自己执行完又跟自己切换，等于
+没切换，就继续往下走，就触发断言了。
+但是改完还是有bug，最终调试发现是Scheduler::run()函数里，最后做完事idle的时候，if条件判断写错了，导致一直为true了，把||改成&&就好了
+
+最重要的难点就是usecaller那里是跟其他地方不一样的，如果不在usecaller里面，线程就是新的线程，它直接跟原来的main协程切换就行了，但是usecaller复用了一个
+已存在的协程，这个已存在的协程和main协程跑的不是一个run方法，所以我们要自己创建一个run的协程，去跟main协程进行替换。
 ## socket函数库开发
 
 ## HTTP协议开发
