完善了视频P35所讲的内容

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -214,6 +214,9 @@ fiberId为0说明是main协程，但是线程的main协程不会进入到MainFun
 
 最重要的难点就是usecaller那里是跟其他地方不一样的，如果不在usecaller里面，线程就是新的线程，它直接跟原来的main协程切换就行了，但是usecaller复用了一个
 已存在的协程，这个已存在的协程和main协程跑的不是一个run方法，所以我们要自己创建一个run的协程，去跟main协程进行替换。
+
+遗留的一个问题：必须先schedule才能start，如果先start后schedule就有点问题了(具体输出哪里不一样，见图片“先start后schedule.png”)
+原因是什么？要怎么解决？见视频 P35开头部分
 ## socket函数库开发
 
 ## HTTP协议开发
