针对异步io，在Scheduler基础上写一个IOManager类，这个版本定义了一些接口，实现了构造和析构函数

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -217,6 +217,16 @@ fiberId为0说明是main协程，但是线程的main协程不会进入到MainFun
 
 遗留的一个问题：必须先schedule才能start，如果先start后schedule就有点问题了(具体输出哪里不一样，见图片“先start后schedule.png”)
 原因是什么？要怎么解决？见视频 P35开头部分
+
+因为是服务器框架，所以肯定是要做io的，所以要基于前面的Scheduler，丰富一下，让他能支持异步io，因为是在linux系统下，所以支持io的协程调度器使用epoll来实现
+IOManager(epoll) --> Scheduler
+        |
+        V
+      idle(epoll_wait)
+
+常见的线程池，是用信号量控制消息队列里放消息和消费消息的，但是信号量一阻塞就把整个线程都阻塞了，我们希望的不是这样的
+比如现在的任务在做异步io，等待数据返回，又没有任务，就会陷入epoll_wait等待，会阻塞掉，此时如果有任务来，就会唤醒epoll_wait，让他先去先去处理任务，任务
+处理完又继续陷入epoll_wait；如果等待的数据回来了，epoll_wait也会唤醒，就这两种唤醒的方式。当往线程池的消息队列里放消息时，通知线程有任务做了，唤醒epoll_wait，先去处理消息。唤醒epoll_wait可以通过什么方式呢，有socket pair 或者 piple的形式，我建一队文件句柄，放消息和取消息，既可以处理异步的epoll情况，又可以处理实时的消息请求。
 ## socket函数库开发
 
 ## HTTP协议开发
