--- a/开发笔记.md
+++ b/开发笔记.md
@@ -227,6 +227,8 @@ IOManager(epoll) --> Scheduler
 常见的线程池，是用信号量控制消息队列里放消息和消费消息的，但是信号量一阻塞就把整个线程都阻塞了，我们希望的不是这样的
 比如现在的任务在做异步io，等待数据返回，又没有任务，就会陷入epoll_wait等待，会阻塞掉，此时如果有任务来，就会唤醒epoll_wait，让他先去先去处理任务，任务
 处理完又继续陷入epoll_wait；如果等待的数据回来了，epoll_wait也会唤醒，就这两种唤醒的方式。当往线程池的消息队列里放消息时，通知线程有任务做了，唤醒epoll_wait，先去处理消息。唤醒epoll_wait可以通过什么方式呢，有socket pair 或者 piple的形式，我建一队文件句柄，放消息和取消息，既可以处理异步的epoll情况，又可以处理实时的消息请求。
+
+io协程调度基于epoll来做，就可以实现异步io，否则用信号量的话，就会阻塞线程，没法异步io
 ## socket函数库开发
 
 ## HTTP协议开发
