新做了个定时器Timer类，用于定时执行某些任务

--- a/开发笔记.md
+++ b/开发笔记.md
@@ -229,6 +229,9 @@ IOManager(epoll) --> Scheduler
 处理完又继续陷入epoll_wait；如果等待的数据回来了，epoll_wait也会唤醒，就这两种唤醒的方式。当往线程池的消息队列里放消息时，通知线程有任务做了，唤醒epoll_wait，先去处理消息。唤醒epoll_wait可以通过什么方式呢，有socket pair 或者 piple的形式，我建一队文件句柄，放消息和取消息，既可以处理异步的epoll情况，又可以处理实时的消息请求。
 
 io协程调度基于epoll来做，就可以实现异步io，否则用信号量的话，就会阻塞线程，没法异步io
+
+基于io协程调度器实现定时器功能，因为是服务器框架，网络是一定要的，也需要有定时功能，比如需要程序定时去执行一些任务
+Timer：插入定时任务，删除定时任务，获取当前时间距离定时器最近触发的时间差，返回当前需要触发的定时器
 ## socket函数库开发
 
 ## HTTP协议开发
